# open-alex-pydantic

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: speckit.plan.agent.md
.github/workflows/: codeql.yml  scorecard.yml  uv-pytest-coverage.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-work-model-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-work-model-implementation/checklists/: readiness.md  requirements.md  work-model.md
specs/001-work-model-implementation/contracts/: work-parsing-contract.md
specs/002-author-model-implementation/: plan.md  spec.md  tasks.md
specs/002-author-model-implementation/checklists/: requirements.md
src/open_alex_pydantic/: __init__.py
src/open_alex_pydantic/entities/: __init__.py  author.py  base.py  exceptions.py  parser.py  work.py
tests/: test_author_parsing.py  test_entities.py  test_placeholder.py  test_work_parsing.py
tests/data/entities/: a5029727898.json  a5043883509.json  w3035608373.json  w3215405033.json
tests/data/entities/invalid/: work_invalid_types.json
