[project]
name = "open-alex-pydantic"
version = "0.1.0"
description = "Open Alex API data structures as Pydantic classes"
readme = "README.md"
authors = [
    { name = "Anirban Basu", email = "anirbanbasu@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
test = [
    "coverage>=7.14.3",
    "pytest>=9.1.1",
]
